WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236332
[JSC] YarrJIT inlining should be disabled when we have DotStarEnclosure
https://bugs.webkit.org/show_bug.cgi?id=236332
Summary
[JSC] YarrJIT inlining should be disabled when we have DotStarEnclosure
Yusuke Suzuki
Reported
2022-02-08 14:51:12 PST
[JSC] YarrJIT inlining should be disabled when we have DotStarEnclosure
Attachments
Patch
(2.33 KB, patch)
2022-02-08 14:52 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(2.36 KB, patch)
2022-02-08 14:55 PST
,
Yusuke Suzuki
msaboff
: review+
Details
Formatted Diff
Diff
Patch
(3.45 KB, patch)
2022-02-08 15:29 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-02-08 14:52:49 PST
Created
attachment 451308
[details]
Patch
Yusuke Suzuki
Comment 2
2022-02-08 14:54:04 PST
rdar://88483574
Yusuke Suzuki
Comment 3
2022-02-08 14:55:08 PST
Created
attachment 451309
[details]
Patch
Michael Saboff
Comment 4
2022-02-08 15:01:47 PST
Comment on
attachment 451309
[details]
Patch r=me
Yusuke Suzuki
Comment 5
2022-02-08 15:29:59 PST
Created
attachment 451314
[details]
Patch
Saam Barati
Comment 6
2022-02-08 15:42:36 PST
Comment on
attachment 451314
[details]
Patch Can we make the compile assertion you were hitting a RELEASE_ASSERT?
Yusuke Suzuki
Comment 7
2022-02-08 17:01:46 PST
(In reply to Saam Barati from
comment #6
)
> Comment on
attachment 451314
[details]
> Patch > > Can we make the compile assertion you were hitting a RELEASE_ASSERT?
Discussed with Saam. We should reorganize YarrJITRegisters to avoid this issue.
Yusuke Suzuki
Comment 8
2022-02-08 17:54:36 PST
Committed
r289450
(
246994@trunk
): <
https://commits.webkit.org/246994@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug