[JSC] YarrJIT inlining should be disabled when we have DotStarEnclosure https://bugs.webkit.org/show_bug.cgi?id=236332 rdar://88483574

Reviewed by Michael Saboff.

JSTests:

* stress/yarr-inlining-dot-star-enclosure.js: Added.
(test):

Source/JavaScriptCore:

YarrJITRegisters::initialStart can be used when m_pattern.m_saveInitialStartValue is true while
it is not defined in YarrJIT inlining. As a result, we emit broken code using InvalidGPRReg.
This patch makes canInline false when m_pattern.m_saveInitialStartValue is true.

* yarr/YarrJIT.cpp:
* yarr/YarrJITRegisters.h:


Canonical link: https://commits.webkit.org/246994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289450 268f45cc-cd09-0410-ab3c-d52691b4dbfc